# hyperliquid_marketmicro_mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  api_spike_finidngs.md  hl_findiings.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
data_exploration/hyperliquid/: check_spikes.py
docs/: api_spike_findings.md  architecture.md  build_plan.md
evals/: README.md  run_evals.py
evals/datasets/: tool_output.jsonl  tool_selection.jsonl
reference/prior_impl/: servers.py
reference/prior_impl/analytics/: aggregation.py  imbalance.py
reference/prior_impl/venue/: hyperliquid.py
src/analytics/: aggregation.py
src/hlmcp/: config.py  server.py
src/hlmcp/analytics/: aggregation.py  imbalance.py  positions.py  utils.py
src/hlmcp/data/: curated_whales.json
src/hlmcp/schemas/: hl_api.py  responses.py
src/hlmcp/tools/: list_hip3_dexes.py  order_book_imbalance.py  whale_position_monitor.py
src/hlmcp/venues/: errors.py  hyperliquid.py
src/models/: hl_adapter.py
src/venue/: hl_schemas.py
tests/: conftest.py
tests/fixtures/: clearinghouse_small.json  clearinghouse_whale.json  l2book_btc_nsf3.json  l2book_btc_nsf4.json  l2book_btc_nsf5.json  l2book_btc_nsf5_m5.json  perpdexs.json
tests/integration/: test_list_hip3_dexes_live.py  test_live_hl.py  test_order_book_imbalance_live.py  test_whale_position_monitor_live.py
tests/unit/: test_aggregation.py  test_imbalance.py  test_list_hip3_dexes.py  test_normalize_wallet.py  test_order_book_imbalance.py  test_positions.py  test_schemas.py  test_smoke.py  test_whale_position_monitor.py
tests/venue/: test_hyperliquid.py
