[project]
name = "hlmcp"
version = "0.1.0"
description = "MCP server exposing Hyperliquid market-microstructure and execution analytics to LLM agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "fastmcp>=3.4.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the importable package is src/hlmcp, so `import hlmcp` works after install.
[tool.hatch.build.targets.wheel]
packages = ["src/hlmcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
# reference/ holds reviewed draft code (Steps 1-3 adapt it); data_exploration/ holds
# spike scripts. Neither is part of the package, so neither must pass lint.
extend-exclude = ["reference", "data_exploration"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "(reference|data_exploration)/"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
exclude = "(reference|data_exploration)/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["reference", "data_exploration", ".venv", "*.egg-info"]
markers = [
    "integration: hits the live Hyperliquid API (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "ruff>=0.15.18",
]
