# Distribution name is the descriptive `hyperliquid-microstructure-mcp` (settled at
# Step 6 from architecture.md's "Open questions" lean) — discoverable and unlikely
# to collide on PyPI. The IMPORT name stays the short `hlmcp` (see the wheel target
# below): `pip install hyperliquid-microstructure-mcp`, then `import hlmcp`.
[project]
name = "hyperliquid-microstructure-mcp"
version = "0.1.0"
description = "MCP server exposing Hyperliquid market-microstructure and execution analytics to LLM agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["hyperliquid", "mcp", "market-microstructure", "trading", "hip-3", "llm-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "fastmcp>=3.4.2",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

# Console entry point: `hlmcp-server` runs the FastMCP server over stdio. This is
# the command a Claude Desktop `mcpServers` config invokes (see README).
[project.scripts]
hlmcp-server = "hlmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the importable package is src/hlmcp, so `import hlmcp` works after
# install even though the distribution is named `hyperliquid-microstructure-mcp`.
# hatchling includes package data (e.g. hlmcp/data/curated_whales.json) by default.
[tool.hatch.build.targets.wheel]
packages = ["src/hlmcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
# data_exploration/ holds the pre-build spike scripts; not part of the package, so
# it need not pass lint.
extend-exclude = ["data_exploration"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# Line length is owned by the formatter (`ruff format` / `black`, line-length=100),
# which keeps CODE within 100. E501 only ever flags lines the formatter cannot
# split — long docstring/comment prose and URLs — and we don't want a hard limit
# on prose, so it is disabled here. Everything else in the `E` group stays on.
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "data_exploration/"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
exclude = "data_exploration/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["data_exploration", ".venv", "*.egg-info"]
markers = [
    "integration: hits the live Hyperliquid API (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "ruff>=0.15.18",
]
